--- a/MyPages/appsettings.json
+++ b/MyPages/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyPagesContext": "Server=(localdb)\\mssqllocaldb;Database=MyPagesContext-54e80547-8fa2-42e8-8335-68a03ebbc407;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
