Exemplo dos filmes funcionando

--- a/MyPages/appsettings.json
+++ b/MyPages/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyPagesContext": "Server=(localdb)\\mssqllocaldb;Database=MyPagesContext-54e80547-8fa2-42e8-8335-68a03ebbc407;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "myConn": "server=localhost;database=pages;uid=root;pwd=root;"
   }
 }
